cabal-version:      3.0
name:               messagetex
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             ARATA Mizuki
maintainer:         minorinoki@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wcompat

library
    import:           warnings
    exposed-modules:  Types
                      InputProcessor
                      ExpansionProcessor
    build-depends:    base ^>=4.16.4.0
                    , bytestring ^>= 0.11.3.1
                    , text ^>=2.0.1
                    , containers ^>= 0.6.6
                    , mtl ^>= 2.3.1
                    , transformers ^>= 0.6.0.4
    hs-source-dirs:   src
    default-language: Haskell2010

executable messagetex-inputprocessor
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , messagetex
                    , text ^>=2.0.1
    hs-source-dirs:   app-inputprocessor
    default-language: Haskell2010

executable messagetex
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , messagetex
                    , text ^>=2.0.1
                    , containers ^>= 0.6.6
                    , mtl ^>= 2.3.1
    hs-source-dirs:   app
    default-language: Haskell2010
